# ruskgpt

./: .gitignore  Cargo.toml  README.md  config.toml.example
abilities/: ask_user_name.toml  eval.toml  ls.toml
src/: api.rs  api_client.rs  cli.rs  config.rs  config_handler.rs  functional_calling.rs  logger.rs  main.rs  process_response.rs
