[package]
name = "ruskgpt"
version = "0.0.3"
authors = ["255doesnotexist <chenyejin2004@stumail.ysu.edu.cn>"]
description = "Yet another async AskGPT CLI client powered by Rust."
repository = "https://github.com/255doesnotexist/ruskgpt/"
license = "GPL-2.0"
keywords = ["async", "cli", "gpt", "chatgpt", "askgpt"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.117"
log = "0.4.21"
flexi_logger = "0.28.1"
chrono = "0.4.38"
clap = "4.5.6"
dirs-next = "2.0.0"
which = "6.0.1"
regex = "1.11.1"
